# chama

./: .gitignore  Buildable.gd  Building.gd  BuildingsManager.gd  BuildingsManager.tscn  Camera2D.gd  Cargo.toml  City.gd  City.tscn  DebugView.gd  District.gd  DistrictManager.gd  EntityManager.gd  GUI.gd  Geometry.gd  HouseManager.gd  Intersection.gd  IntersectionManager.gd  Makefile  Marketplace.gd  README.md  Street.gd  StreetManager.gd  StyleManager.gd  Trunk.toml  about.toml  deny.toml  project.godot  shell.nix  style.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  test.yml
Buildings/: Church.gd  Farm.gd  House.gd  Marketplace.gd
GUI/: GUI.gd  MainPanel.gd  MainPanel.tscn
Managers/: BuildingsManager.gd  BuildingsManager.tscn  DistrictManager.gd  EntityManager.gd  IntersectionManager.gd  StreetManager.gd
States/: Destroy.gd  EndCreateCurvedStreet.gd  EndCreateLinearStreet.gd  EndCreateStreet.gd  Idle.gd  StartCreateStreet.gd
backend/: tauri.conf.json
frontend/rust_editor/: Cargo.toml
frontend/rust_editor/src/: actions.rs  style.rs  system.rs
frontend/rust_internal/: Cargo.toml
frontend/rust_macro/: Cargo.toml
frontend/rust_macro/src/: lib.rs
frontend/ui/: Cargo.toml  LICENSE-MIT  README.md
frontend/ui/doc/: dropped text.txt
frontend/ui/src/: main.rs
frontend/ui/src/algorithm/: geo.rs  mod.rs
frontend/ui/src/map/: district.rs  house.rs  intersection.rs  map.rs  mod.rs  street.rs
frontend/ui/src/map/actions/: create_street.rs  delete_street.rs  mod.rs  split_street.rs
frontend/ui/src/map/actions/intersection/: create.rs  delete.rs  mod.rs  remove_connected_street.rs  update.rs
frontend/ui/src/map/actions/street/: create.rs  delete.rs  update.rs
frontend/ui/src/plugins/: create_district.rs  create_freeform_street.rs  delete_district.rs  delete_street.rs  load.rs  mod.rs  save.rs  test_data.rs
godot/: Buildable.gd  CurvedStreet.gd  District.gd  export_presets.cfg  project.godot  style.json
godot/GUI/: GUI.gd  MainPanel.gd  MainPanel.tscn
godot/Managers/: IntersectionManager.gd
godot/States/: CreateBuilding.gd  Destroy.gd  EndCreateCurvedStreet.gd  EndCreateLinearStreet.gd  Idle.gd  State.gd  StateMaschine.gd
plugin_camera/: Cargo.toml
plugin_camera/src/: lib.rs
plugin_grid/: Cargo.toml
plugin_grid/src/: lib.rs
plugin_ribbon/: Cargo.toml
plugin_ribbon/src/: lib.rs
plugin_ribbon/src/model/: mod.rs  ribbon.rs  ribbon_action.rs  ribbon_button.rs  ribbon_tab.rs  ribbon_tab_group.rs
plugin_ribbon/src/view/: mod.rs  ribbon.rs  ribbon.scss  ribbon_button.rs  ribbon_tab.rs  ribbon_tab.scss  ribbon_tab_group.rs  (+1 more)
plugin_toolbar/: Cargo.toml
plugin_toolbar/src/: lib.rs  main.rs  toolbar.rs  toolbar_button.rs
plugin_ui_components/: Cargo.toml
plugin_ui_components/src/: lib.rs  snackbar.rs
plugin_undo_redo/: Cargo.toml
plugin_undo_redo/src/: lib.rs  redo.rs  undo.rs
rust/: Cargo.toml
rust/src/: create_district_state.rs  create_freeform_district_state.rs  create_freeform_street_state.rs  create_street_state.rs  delete_district_state.rs  delete_street_state.rs  district.rs  editor.rs  freeform_state.rs  gizmo.rs  house.rs  idle_state.rs  interactive_element.rs  intersection.rs  lib.rs  map.rs  move_control_state.rs  renderer.rs  state.rs  store.rs  street.rs  style.rs
rust/src/actions/: action.rs  mod.rs  redo.rs  undo.rs
rust/src/map/: district.rs  intersection.rs  map.rs  map_city.rs  mod.rs  street.rs
rust/src/plugins/: create_district.rs  create_freeform_street.rs  delete_district.rs  delete_street.rs  map_render.rs  mod.rs
rust/src/states/: box_select_state.rs  create_district_state.rs  create_freeform_district_state.rs  create_freeform_street_state.rs  create_street_state.rs  delete_district_state.rs  delete_street_state.rs  idle_state.rs  mod.rs  move_control_state.rs
rust/src/systems/: box_select_system.rs  create_district_system.rs  create_freeform_district_system.rs  create_freeform_street_system.rs  create_street_system.rs  delete_district_system.rs  delete_street_system.rs  mod.rs  move_control_system.rs  render_map_system.rs
rust_editor/: Cargo.toml
rust_editor/src/: actions.rs  camera.rs  editor.rs  gizmo.rs  grid.rs  interactive_element.rs  lib.rs  macros.rs  plugin.rs  renderer.rs  store.rs  style.rs  system.rs  toolbar.rs
rust_editor/src/input/: keyboard.rs  mouse.rs
rust_editor/src/plugins/: camera.rs  grid.rs  mod.rs  plugin.rs  redo.rs  toolbar.rs  undo.rs
rust_editor/src/ui/: app.rs  dialog.rs  dialog.scss  dyn_children_renderer.rs  mod.rs  panel.rs  panel.scss  toolbar.rs  toolbar_button.rs  tooltip.rs  tooltip.scss
rust_internal/: Cargo.toml
rust_internal/src/: lib.rs  plugin.rs
rust_internal/src/ui/: checkbox.rs  mod.rs  numberbox.rs  switch.rs  switch.scss  textbox.rs  textbox.scss
rust_macro/: Cargo.toml
rust_macro/src/: generate.rs  lib.rs  parse.rs  structs.rs
src/: create_street_state.rs  delete_street_state.rs  idle_state.rs  intersection.rs  lib.rs  main.rs  map.rs  road_system.rs  street.rs
ui/: .gitignore  Cargo.toml  LICENSE-MIT  app.scss  index.html  index.scss  package.json  rollup.config.js  style.scss  tsconfig.json  webpack.config.js
ui/public/: global.css  index.html
ui/src/: App.svelte  MapEditor.svelte  ToggleToolbarButton.svelte  Toolbar.svelte  _main.js  index.ts  main.rs
ui/src/algorithm/: geo.rs
ui/src/map/: district.rs  house.rs  intersection.rs  map.rs  map_city.rs  mod.rs  street.rs
ui/src/map/actions/: mod.rs  split_street.rs
ui/src/map/actions/intersection/: create.rs  delete.rs  mod.rs  remove_connected_street.rs  update.rs
ui/src/map/actions/street/: create.rs  delete.rs  update.rs
ui/src/plugins/: create_district.rs  create_freeform_street.rs  debug.rs  delete_district.rs  delete_street.rs  load.rs  map_render.rs  mod.rs  new.rs  reference_image.rs  reference_image.scss  save.rs  settings.rs  sync.rs  test_data.rs
ui/src/systems/: create_freeform_district_system.rs  create_street_system.rs  delete_district_system.rs  delete_street_system.rs  mod.rs
ui/src/theme/dark/: _smui-theme.scss
(+10 files in other folders)
