#[package]
#name = "rust_procmap"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#bevy = { version = "0.5.0", features = ["dynamic"] }
#bevy_prototype_lyon = "0.3.1"


[package]
resolver = "2"
name = "rust_procmap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
geo-types = "0.7.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console'
]
