[workspace]

members = [
    "rust_editor",
    "rust_internal",
    "rust_macro",
    "plugin_camera",
    "plugin_grid",
    "plugin_ribbon",
    "plugin_toolbar",
    "plugin_ui_components",
    "plugin_undo_redo",
]

default-members = [
    "rust_editor",
    "rust_internal",
    "rust_macro"
]

[workspace.package]
version = "0.0.0"
authors = ["Gil Engel"]
description = "Framework for creating graphical editors that run everywhere (native, web)"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master", features=["csr"] }