[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
#wee_alloc = { version = "0.4.5", optional = true }
geo-types = "0.7.2"
geo = "0.18.0"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console'
]

[profile.release]
lto = true