[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
#wee_alloc = { version = "0.4.5", optional = true }
geo-types = "0.7.2"
geo = { version = "0.18.0", features = ["use-serde"] }
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen", "serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
lazy_static = "1.4.0"
enum-as-inner = "0.3.3"

rust_editor = { path = "../rust_editor" }
rust_macro = { path = "../rust_macro" }
rust_internal = { path = "../rust_internal" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlAnchorElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList'
]

[profile.release]
lto = true