[package]
name = "rust_editor"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
geo-types = "0.7.2"
geo = { version = "0.18.0", features = ["use-serde"] }
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen", "serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
gloo = "0.6.0"
rust_macro = { path = "../rust_macro" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlLabelElement',
  'HtmlSpanElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList',
  'EventListener'
]

