[package]
name = "rust_editor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
doctest = false # disable doctest for the moment

[dependencies]
yew = { workspace = true }

rust_macro = { path = "../rust_macro" }
rust_internal = { path = "../rust_internal" }
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.7"
geo-types = "0.7.2"
geo = { version = "0.20.1", features = ["use-serde"] }
uuid = { version = "1.1.1", features = ["v4", "js", "serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
gloo = "0.7.0"
enum-as-inner = "0.5.0"
gloo-render = "0.1"
thiserror = "1.0"
rand = "0.8.5"
lazy_static = "1.4.0"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlLabelElement',
  'HtmlSpanElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList',
  'EventListener',
  'DataTransfer',
  'DataTransferItem',
  'DataTransferItemList',
  'EventTarget',
  'ImageBitmap',
]
