[package]
name = "rust_internal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yew = { workspace = true }

geo = "0.20.1"
wasm-bindgen = "0.2.78"
regex = "1.5.6" # for text input validator

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlLabelElement',
  'HtmlSpanElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList',
  'EventListener',
]
