[package]
name = "rust_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false # disable doctest for the moment

[dependencies]
yew = { workspace = true }

syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
convert_case = "0.5.0"
colored = "2.0.0"
rust_internal = { path = "../rust_internal" }

ansi_term = "0.12"