[package]
name = "editall-ui"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# EditAll
rust_editor = { path = "../rust_editor" }
rust_macro = { path = "../rust_macro" }
rust_internal = { path = "../rust_internal" }

# Plugins
plugin_camera = { path = "../plugin_camera" }
plugin_grid = { path = "../plugin_grid" }
plugin_undo_redo = { path = "../plugin_undo_redo" }
plugin_ribbon = { path = "../plugin_ribbon" }
plugin_toolbar = { path = "../plugin_toolbar" }

plugin_ui_components = { path = "../plugin_ui_components" }


geo = { version = "0.21.0", features = ["use-serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
uuid = { version = "1.1.1", features = ["v4", "js", "serde"] }
yew = { git = "https://github.com/yewstack/yew", branch = "master", features=["csr"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.30"
rand = "0.8.5"
rand_chacha = "0.3.1"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop", branch = "master" }
js-sys = "0.3.57"

ws_stream_wasm = "0.7.3"
pharos = "0.5.3"
futures = "0.3.21"
futures_cbor_codec = "0.3.1"
futures_codec = "0.4.1"
async_io_stream = "0.3.3"
once_cell = "1.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"



[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlLabelElement',
  'HtmlSpanElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList',
  'EventListener'
]
