[package]
name = "editall-ui"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
geo = { version = "0.19.0", features = ["use-serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen", "serde"] }
rust_editor = { path = "../rust_editor" }
rust_macro = { path = "../rust_macro" }
rust_internal = { path = "../rust_internal" }
yew = { git = "https://github.com/yewstack/yew", branch = "master", features=["csr"] }
wasm-bindgen = "0.2.78"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlAnchorElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlLabelElement',
  'HtmlSpanElement',
  'HtmlSelectElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Storage',
  'DragEvent',
  'DataTransfer',
  'FileList',
  'File',
  'DomRect',
  'DomTokenList',
  'EventListener'
]
